# sauvia-crm

./: .env.complete  .env.example  .env.production  .env.production.example  .env.vercel  .gitignore  .npmrc  AGENTS.md  AGENTS_DESIGN.md  AWS_SERVICES_INVENTORY.md  CALISTENIA_IA_PROMPTS.md  CHEAT_SHEET.txt  CLAUDE.md  CLERK_MCP_COMPLETE_SETUP.md  CLOUDFLARE_SETUP.md  COGNITO_TO_CLERK_MIGRATION.md  DEPLOYMENT.md  Dockerfile  Dockerfile.web  EXECUTION_PLAN.md  FINAL_STATUS.txt  FINAL_SUMMARY.md  IMPLEMENTATION-SUMMARY.md  IMPLEMENTATION_CHECKLIST.md  IMPLEMENTATION_CODE.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_INSTRUCTIONS.md  IMPLEMENTATION_READY.md  IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_SUMMARY_TODAY.md  INDEX.md  INFRA_AWS.md  INFRA_CREATED.md  INFRA_FORECAST_3ANOS.md  INTEGRACAO_COMPLETA_2026-04-10.md  MCP_QUICK_REFERENCE.txt  MCP_SERVER_SETUP.md  MIGRATION_SUMMARY.md  MVP_PLAN_14_DIAS.md  PERSONAS.md  (+14 more)
apps/backend/: .env.example  .env.production.render  Dockerfile  pyproject.toml  requirements.txt
apps/backend/src/: config.py  container.py  main.py
apps/backend/src/adapters/driven/persistence/: database.py  models.py
apps/backend/src/application/dtos/: common.py  patient_dto.py
apps/backend/src/application/ports/: auth_port.py  email_port.py  storage_port.py  whatsapp_port.py
apps/backend/src/domain/: exceptions.py
apps/backend/src/domain/entities/: appointment.py  patient.py  user.py
apps/backend/src/domain/value_objects/: cpf.py  enums.py
apps/backend/tests/integration/adapters/: test_health.py
apps/backend/tests/unit/domain/: test_cpf.py
(+210 files in other folders)
