[project]
name = "sauvia-backend"
version = "0.1.0"
description = "Sauvia CRM Backend - FastAPI + Hexagonal Architecture"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.135.0",
    "uvicorn>=0.44.0",
    "sqlalchemy>=2.0.49",
    "asyncpg>=0.31.0",
    "pydantic-settings>=2.13.0",
    "alembic>=1.18.0",
    "python-jose>=3.5.0",
    "passlib>=1.7.4",
    "bcrypt>=5.0.0",
]

[project.optional-dependencies]
test = [
    "pytest>=9.0.0",
    "pytest-asyncio>=1.3.0",
    "httpx>=0.28.0",
    "factory-boy>=3.3.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
